Updates from Overleaf

--- a/Bibliography/Articles.bib
+++ b/Bibliography/Articles.bib
@@ -18,3 +18,20 @@
   year      = {1973},
   publisher = {The University of Chicago Press}
 } % https://www.journals.uchicago.edu/doi/epdf/10.1086/260062
+
+@article{SF,
+  title     = {Risk Neutral Densities: A review},
+  author    = {Stephen Figlewski},
+  journal   = {},
+  volume    = {},
+  number    = {},
+  year      = {2018},
+  publisher = {SSRN}
+} % https://www.journals.uchicago.edu/doi/epdf/10.1086/260062
+
+@misc{DJ,
+  title     = {Adam: A Method for Stochastic Optimization},
+  author    = {Diedrik P. Kingma and Jimmy Lei Ba},
+  year      = {2017},
+  note      = {\url{https://arxiv.org/pdf/1412.6980.pdf}}
+} %
