--- a/Bibliography/Books.bib
+++ b/Bibliography/Books.bib
@@ -114,3 +114,13 @@
   year      ={2003},
   publisher ={Vikas Publishing House}
 }
+
+@BOOK{ICF,
+  author    = {Laurent L Jacque},
+  title     = {Neural Networks and Deep Learning},
+  subtitle  = {},
+  publisher = {John Wiley \& Sons},
+  year      = {2014},
+  edition   = {},
+  isbn      = {9781118781869},
+}
