--- a/Include/Frontmatter/Nomenclature.tex
+++ b/Include/Frontmatter/Nomenclature.tex
@@ -23,5 +23,12 @@ The nomenclature describes several symbols and functions that will be used withi
 % https://www.overleaf.com/learn/latex/nomenclatures
 
 % \nomenclature[Category]{Symbol}{Description}
+\nomenclature[]{$C^M$}{Market's call option price}
+\nomenclature[]{$C^{BS}$}{Black Scholes call option price}
+\nomenclature[]{$\IV{\cdot}$}{Implied Volatility}
+\nomenclature[]{$\mathcal{N}\mathcal{N}$}{Set of neural networks}
+\nomenclature[]{$g$}{Activation function}
+\nomenclature[]{$\pazocal{W}$}{Weights}
+\nomenclature[]{$L$}{Loss function}
 
 \endgroup
