--- a/Include/Mainmatter/1-Introduction.tex
+++ b/Include/Mainmatter/1-Introduction.tex
@@ -5,3 +5,4 @@
 
 
 \subsection{Problem statement}\label{Sec.Problem_statement}
+% How can numeric methods be utilised to describe price movements and what are the advantages or diadvantages of such methods. Furthermore, 
