--- a/Include/Mainmatter/Discussion.tex
+++ b/Include/Mainmatter/Discussion.tex
@@ -1,1 +1,12 @@
 \chapter{Discussion}\label{Ch.Discussion}
+As already mentioned numerous times throughout \autoref{Ch.3}, the process of choosing the architecture of a neural network for ones specific problem can be time consuming and very subjective. Even though, commands such as \lstinline{tfruns} exist, this is not able to see whether the neural network seems to be overfitting throughout its learning period. Thus, it requires that the user of the neural network manually check this before implementing the architecture that \lstinline{tfruns} suggests. Furthermore, as there are so many parameters, functions and optimisers to choose from for it to the best neural network one has to check all possible combinations of the parameters. 
+
+Another very important thing to note regarding this problem of determining the best possible neural network, is whether or not the specific problem requires accuracy, speed, convenience or balance of these.
+
+Building upon the topic of choosing the best neural network,
+
+%Fejl
+%Størrelse af netværket
+% performance for andet data og andra aktier
+% Monte Carlo er præcis  dette er approx, men meget hurtigere
+% sammenligning af forskellige likviditeter
