--- a/Preamble/Commands.tex
+++ b/Preamble/Commands.tex
@@ -61,7 +61,8 @@
 
 
 
-
+\WarningsOff*\usepackage{xassoccnt}
+\DeclareCoupledCounters[name=figurteo]{figure,theo, defi, lemm, propo, corol, exam}\WarningsOn
 
 
 % Theorems, definitions etc. ----------------------------------------------------
