--- a/Preamble/Packages.tex
+++ b/Preamble/Packages.tex
@@ -15,6 +15,7 @@
 \usepackage{listofitems}
 
 
+
 % Base-packages ------------------------------------------------------------------
 \usepackage[T1]{fontenc}            % Show symbols and characters
 \usepackage[utf8]{inputenc}         % Read symbols and characters
@@ -78,7 +79,7 @@
 \usepackage[toc,page]{appendix}     % Better Appendices 
 \usepackage[some]{background}       % For background images
 \usepackage{pageslts}               % See PDF page numbering
-\usepackage{calc}                   % Arithmetic in Latex
+%\usepackage{calc}                   % Arithmetic in Latex
 
 
 
