--- a/master.tex
+++ b/master.tex
@@ -39,6 +39,10 @@
 
 % 
  \include{Include/Mainmatter/4-}
+
+% Application
+ \include{Include/Mainmatter/5-}
+ \include{Include/Mainmatter/6-}
  
 % Concluding element
  \include{Include/Mainmatter/Discussion}
