--- a/Include/Mainmatter/4-.tex
+++ b/Include/Mainmatter/4-.tex
@@ -1,33 +1,41 @@
-\chapter{Application}\label{Ch.4}
+\chapter{Finite Difference}\label{Ch.4}
+This chapter is based upon \citep{}, unless stated otherwise.
 
-In this chapter we will use the theory from the former chapters to derive the risk neutral density function for a chosen option on an underlying stock. First a neural network will be constructed to estimate a function for the implied volatility, which derivatives can be estimated by using finite difference. 
+As mentioned in \autoref{Ch.2}, the finite difference method will be used to determine the derivatives seen in \eqref{Eq:RND_Derivatives}. The principle of the finite difference method is to numerically solve ordinary differential equations using difference quotients \citep{Hull}. Consider the Taylor series for a function $f\in C^{\infty}$
+\begin{align*}
+    f(a) &= \sum_{k=0}^\infty \frac{\partial^k f(t)}{\partial t^k}\frac{1}{k!}(a-t)^k, %+ o\left((x-a)^{k}\right),
+\intertext{then it can be rewriting in terms of the central difference operator, which yields}
+    f(t+\Delta) - f(t-\Delta) &= \sum_{k=0}^\infty \frac{\partial^k f(t)}{\partial t^k}\frac{1}{k!}(\Delta)^k - \sum_{k=0}^\infty \frac{\partial^k f(t)}{\partial t^k}\frac{1}{k!}(-\Delta)^k\\
+    &=2\frac{\partial f(t)}{\partial t}\Delta + 2\frac{\partial^3 f(t)}{\partial t^3}\frac{1}{3!}(\Delta)^3 + 2\frac{\partial^5 f(t)}{\partial t^5}\frac{1}{5!}(\Delta)^5 + \cdots.
+\intertext{Isolating for the first order derivative and determining the error for the higher order derivatives yield}
+    \frac{\partial f}{\partial t} &= \frac{f(t+\Delta)-f(t-\Delta)}{2\Delta}+o(\Delta^2),
+\end{align*}
+which is called the \emph{central difference} method. In this expression the error term, $o(\Delta^2)$ is, as mentioned, the collection of the higher order derivatives. Likewise, if one were to use the forward- or backward difference operator the results would be
+\begin{align*}
+    \frac{\partial f}{\partial t}=\frac{f(t+\Delta)-f(t)}{\Delta}+o(\Delta)\quad\textrm{and}\quad\frac{\partial f}{\partial t}=\frac{f(t)-f(t-\Delta)}{\Delta}+o(\Delta),
+\end{align*}
+named accordingly. In the equations above $o(\Delta)$ and $o(\Delta^2)$ decrease as $\Delta$ decreases, minimising the error of the derivative. Naturally, $o(\Delta^2)$ decreases the fastest for $|\Delta|<1$. This is coherent with the methods, without their respective error terms, being good approximations if $\Delta$ is small.
 
-All data processing can be found in ....github....
+As the project also concerns approximating second order derivatives, the second order central difference method is given as
+\begin{align*}
+    \frac{\partial^2 f}{\partial t^2} &= \frac{f(t+\Delta) - 2f(t) + f(t-\Delta)}{\Delta^2}+o(\Delta^2),
+\end{align*}
+where its derivation is similar to the first order central difference method.
 
-\subsection{Data}
-We have chosen to work with the stock GOOG and wants to derive the risk neutral density function for the call option of this underlying stock. First we have the 16th of February retrieved data for this option including among other things prices of the option, stock prices, strike prices and time to maturity for options with maturity time in the period from 17-02-2023 to 20-06-2025. Further we have calculated the implied volatility for all of these option prices using the function in R "EuropeanOptionImpliedVolatility", which will be used to train and test the neural network. As expected when plotting the implied volatility with respect to strike prices and time to maturity the mentioded implied volatility smile is only seen when close to maturity. Hence, we exclude all options with time to maturity larger than 0.1, that is approximately 36 days. The below figure illustrates the implied volatility smile constructed by our data, where it is clear that the volatility smile is getting more distinct closer to maturity. 
-
-\textbf{FIN FIGUR}
-
-\section{Neural network for implied volatility}
-For the construction of the neural network the package "tensorflow" is used along with the "keras" package. After sorting the data there are approximately 60.000 point left which should be split in three batches, training, validation and test data sets. We've opted to divide the data into three sets, allocating 50\% for training and 25\% each for validation and testing. This method of splitting the data is widely used and hence adopted. The validation set is utilized to identify overfitting by contrasting the model's error on the training set with that of the validation set. If the training set's error is lower than that of the validation set, it may suggest the presence of overfitting.
-
-When constructing the neural network there is not one correct network, but we have chosen the network with the smallest errors measured by MSE and MAE and with no signs of overfitting. In this process we have tried one, two, three and four layered neural networks with different numbers of nodes. In the below figur the MSE og MAE is presented for both the training and validation set for each epoch and networks with different number of layers. 
-
-\textbf{FINE FIGURER}
-
-The results show that networks with three or four hidden layers exhibit signs of overfitting, while the network with two hidden layers has a comparable error rate with no indications of overfitting. The single-layered network shows no signs of overfitting, but its error rate is worse than that of the two-layered network. Therefore, we have selected the neural network with two hidden layers. Additionally, we conducted experiments on varying the number of nodes and dropout rates for networks with one, two, three, and four hidden layers. Based on these experiments, we concluded that the neural network with two hidden layers, each with 10 and 20 nodes, and dropout rates of 40\% and 50\%, respectively, performed the best. In the below figure the volatility surface constructed by the chosen neural network and the test data set is illustrated.
-
-\textbf{ENDNU EN DEJLIG FIGUR}
-
-\textbf{ref til figur} reveals that the volatility surface created by the neural network exhibits a volatility smile, which closely resembles the one observed in the data. Furthermore, we get at MSE and MAE at .... and .... respectively. 
-
-\section{Derivative of the implied volatility}
-Using the neural network presented in the former section we will now construct the derivatives of the implied volatility with respect to the strike price once and twice. This is done as described in \textbf{refsection} by numerically differenciating the implied volatility using finite difference. By implementing this method on the neural network 
-
- 
+Thus, given a neural network or another function estimating method which produces a smooth enough function, finite difference can be easily implemented, especially for lower order derivatives. 
 
 
+\section{Partial Differential Equation}\label{Sec.Finite_Difference}
+The finite difference methods use cases can also be extended further than simply approximating derivatives; its methodology can be implemented to describe partial differential equations (PDEs). Given a solution to such a PDE, this solution can be approximated using the finite difference methods described beforehand.
+
+For the Black-Scholes equation, the derivatives are with respect to time $t$ and stock prices $S$. As such, for the finite difference method to be useful, one has to discretise the domain of these two variables on which the finite difference method will be applied. To visually aid this description see \autoref{Figure:Finite_Difference}.
+\input{Figures/TikZ/FD}
+More precisely, the domain is discretised into partitions $t_0<t_1<\dots<t_n$ and $S_0<S_1<\dots<S_n$ where $n,m\in\N$. Thus, given that the domains are equidistantly spaced, the method will also give an equidistant grid, as the one seen in \autoref{Figure:Finite_Difference}. Given that one has to iteratively determine the points of the solution one might have to condition the boundaries of the grid. For Black-Scholes, these \emph{boundary conditions}, as they are called, are given as $(S-K)^+$ for time $T$ and $0$ for $S=0$
 
 
+\subsection{Stability}
+A problem with some of the finite difference methods with regards to solving PDEs is that the methods might explode. 
 
+
+\subsection{Calibration}
+As the finite difference method can be used to describe PDEs of a model, it can also be used to calibrate models. In practice, this does however, require that the price of an option is known as every point which could be evaluated. In the case of the Black-Scholes model, the only parameter which can be calibrated is its volatility.
